--- a/views/q_one.erb
+++ b/views/q_one.erb
@@ -2,6 +2,6 @@
 
 <div>
 <% @git_objects.each do |git_object| %>
-<p> <%=h git_object.hex_sha1 %> (<%=h git_object.type %>)</p>
+<p> <a href="/q/<%=h git_object.hex_sha1 %>"><%=h git_object.hex_sha1 %> (<%=h git_object.type %>) </a></p>
 <% end %>
 </div>
