Bring back index/about pages; add an indexing daemon

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,6 +12,14 @@
           Welcome to <a href="/">anygit</a>, indexing the world's git repositories.
         </div>
 
+<% if @flash %>
+        <div class="flash">
+          <ul id="flash-messages">
+            <li><%=h @flash %></li>
+          </ul>
+        </div>
+<% end %>
+
         <div class="body">
           <%= yield %>
         </div>
